--- a/src/components/HeaderSection/NavBar/MenuItem/MenuItem.css
+++ b/src/components/HeaderSection/NavBar/MenuItem/MenuItem.css
@@ -15,32 +15,18 @@
   border: 1px solid white;
 }
 
-.parent-level,
-.sub-level {
-  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.719);
-}
-
 .parent-level {
-  top: 104%;
-  left: 0;
-  min-width: 100%;
+  @apply top-[104%] left-0 min-w-full;
 }
 
 .sub-level {
-  left: 100%;
-  width: auto;
+  @apply top-0 left-full w-auto;
 }
 
 .menu-item-children {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.582);
-  height: 0;
-  opacity: 0;
-  transform: translateY(-20px);
-  transition: height 0s ease-in, opacity 0s ease-in, transform 0s ease-in;
+  @apply absolute bg-black/50 h-0 opacity-0 -translate-y-5 transition-all duration-[0s] ease-in;
 }
 
-.menu-item-children.menu-open {
-  transition: height 0.25s ease-in, opacity 0.25s ease-in,
-    transform 0.25s ease-in;
+.menu-open {
+  @apply transition-all translate-y-0 opacity-100 duration-[0.25s] ease-in;
 }
