--- a/src/components/HeaderSection/NavBar/MenuItem/MenuItem.css
+++ b/src/components/HeaderSection/NavBar/MenuItem/MenuItem.css
@@ -2,6 +2,10 @@
 
 .menu-item {
   width: auto;
+}
+
+.menu-item-link {
+  width: auto;
   border: 1px solid transparent;
   border-radius: 6px;
   text-align: center;
@@ -11,20 +15,24 @@
   transition: border 0.13s ease-in;
 }
 
-.menu-item:hover {
+.menu-item-link:hover {
   border: 1px solid white;
 }
 
 .parent-level {
-  @apply top-[104%] left-0 min-w-full;
+  @apply top-[100%] left-0 min-w-full;
 }
 
 .sub-level {
-  @apply top-0 left-full w-auto;
+  @apply -top-1 left-full w-auto pe-1;
 }
 
 .menu-item-children {
   @apply absolute bg-black/50 h-0 opacity-0 -translate-y-5 transition-all duration-[0s] ease-in;
+}
+
+.menu-item-children:hover ~ .menu-item-link {
+  border: 1px solid white;
 }
 
 .menu-open {
