--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,5 +5,5 @@
 }
 
 .social-media-icon-wrapper {
-  @apply bg-white relative rounded-4xl p-2.5 after:absolute after:content-[''] after:w-full after:h-full after:top-0 after:left-0 after:rounded-4xl hover:after:scale-[140%] after:border after:border-white after:opacity-0 hover:after:opacity-100 after:transition-all duration-700;
+  @apply bg-white relative rounded-4xl p-2.5 cursor-pointer after:absolute after:content-[''] after:w-full after:h-full after:top-0 after:left-0 after:rounded-4xl hover:after:scale-[140%] after:border after:border-white after:opacity-0 hover:after:opacity-100 after:transition-all duration-1000;
 }
