--- a/src/components/AppComponent/AppComponent.module.css
+++ b/src/components/AppComponent/AppComponent.module.css
@@ -1,3 +1,11 @@
+@import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --breakpoint-xs: 30rem;
+}
+
 .b1 {
   border: 1px solid red;
 }
