--- a/src/components/AppComponent/AppComponent.css
+++ b/src/components/AppComponent/AppComponent.css
@@ -3,7 +3,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-  --breakpoint-xs: 30rem;
+  --breakpoint-xs: 30rem; /*480px*/
 }
 
 .b1 {
