--- a/src/components/AppComponent/AppComponent.css
+++ b/src/components/AppComponent/AppComponent.css
@@ -4,6 +4,9 @@
 
 @theme {
   --breakpoint-xs: 30rem; /*480px*/
+  --color-theme-gray: #232323;
+  --font-theme: "Poppins";
+  --shadow-theme: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
 
 .b1 {
