--- a/src/components/AppComponent/AppComponent.css
+++ b/src/components/AppComponent/AppComponent.css
@@ -7,6 +7,7 @@
   --color-theme-gray: #232323;
   --font-theme: "Poppins";
   --shadow-theme: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  --aspect-theme-product: 2/3;
 }
 
 .b1 {
