--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -8,7 +8,10 @@
 }
 
 .slider-arrow {
-  transition: opacity 1s, translate 1s, background-color 0.3s;
+  transition:
+    opacity 1s,
+    translate 1s,
+    background-color 0.3s;
 }
 
 .slider-arrow:hover {
@@ -17,7 +20,7 @@
 }
 
 .slide-fade {
-  animation: slide-emerge 0.6s ease forwards;
+  animation: slide-emerge 1s ease forwards;
 }
 
 @keyframes slide-emerge {
